--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
 </head>
 
-<body background="background.jpg">
+<body>
   <center>
     <h3 class="btn btn-info">Filter Web App</h3>
     <br><br>
